--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "otaku-space",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "App.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
