--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "otaku-space",
+  "name": "anime-space",
   "version": "1.0.0",
   "main": "App.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll"
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
+    "test": "npx jest --watchAll"
   },
   "jest": {
     "preset": "jest-expo"
