--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-picker/picker": "^2.4.8",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -37,15 +37,15 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.9",
+    "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.19.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "jest": "^26.6.3",
-    "jest-expo": "~47.0.1",
+    "jest-expo": "^47.0.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.6.3"
   },
