--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@pchmn/expo-material3-theme": "^1.3.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.0.5",
