--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anime-space",
   "version": "1.2.0",
-  "main": "App.ts",
+  "main": "index.js",
   "scripts": {
     "start": "npx expo start",
     "android": "npx expo start --android",
